# jax_utils

./: .code-review-SKILL.md  .gitignore  .infrastructure-review-SKILL.md  .markdownlint.json  AGENSTS.md  AGENTS.md  CLAUDE.md  FINAL_COMPLETION_STATUS_20260401.md  Makefile  QUICK_START.md  README.md  WORKTREE_SCOPE.md  pyproject.toml  pyrightconfig.json  task.md  test_gpu_env_setup.py  test_gpu_env_simple.py
.codex/: README.md  config.toml
.devcontainer/: devcontainer.json
.github/: .agent.md  AGENTS.md  COMPREHENSIVE_REVIEW_DESIGN.md  PULL_REQUEST_TEMPLATE.md  SKILLS_INTEGRATION_PLAN.md  copilot-instructions.md
Archive/: run_smolyak_experiment.py.bak
agents/: CODEX_WORKFLOWS.md  COMMUNICATION_PROTOCOL.md  README.md  TASK_WORKFLOWS.md  USER_GUIDE_JA.md  agents_config.json  agents_config.yaml  task_catalog.yaml
diary/: 2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20-env-dict.md  2026-03-20.md  2026-03-21.md  2026-03-21_week2_complete.md  2026-04-01_FINAL_COMPLETION.md  2026-04-02.md  README.md
docker/: Dockerfile  requirements.txt
documents/: AGENTS_COORDINATION.md  AGENT_DIRECTORY_PROPOSAL.md  AGENT_FILE_EXPLORATION_POLICY.md  AGENT_RESEARCH.md  AGENT_TASK_CHECKLIST.md  AGENT_TASK_INDEX_GUIDE.md  AGENT_TASK_MAP.md  AGENT_TASK_VALIDATION_REPORT.md  AGENT_USAGE.md  AI_AGENT_CUSTOMIZATION_RESEARCH_2026.md  AI_AGENT_WORKFLOWS_COMPARISON.md  BENCHMARK_RUN_GUIDE.md  BRANCH_SCOPE.md  BRANCH_STRATEGY_SMOLYAK_EXPERIMENT.md  CI_JOBS.md  CODE_REVIEW_REPORT_2026-03-20.md  COMMANDS.md  CRITICAL_GUARDIAN_DESIGN.md  DESIGN_CLEANUP_REPORT.md  DOCSTRING_GUIDE.md  DOCUMENT_RESTRUCTURING_PROPOSAL.md  EXTENDED_AUTOMATION_ROADMAP.md  FILE_CHECKLIST_OPERATIONS.md  IMPLEMENTATION_QUICK_REFERENCE.md  IMPLEMENTATION_STRATEGY_12WEEKS.md  README.md  REVIEW_PROCESS.md  REVIEW_PROCESS.md.bak  SKILL_IMPLEMENTATION_GUIDE.md  TEAM_IMPLEMENTATION_GUIDE.md  TROUBLESHOOTING.md  WEEK1_IMPLEMENTATION_SUMMARY.md  WORKFLOW_DEFINITIONS.md  WORKFLOW_INVENTORY.md  WORKFLOW_SKILL_MAP.md  WORKTREE_SCOPE_TEMPLATE.md  coding-conventions-cpp.md  coding-conventions-experiments.md  coding-conventions-logging.md  coding-conventions-project.md  (+14 more)
experiments/: README.md
include/: _pr2_smolyak_grid_wrapper.hpp  _sample_matrix_cpp_for_review.hpp
jupyter/: receptive_field.ipynb
notes/: README.md  github-mirror-procedure.md
python/: test.py
references/: README.md  bellman-backprop-references.md  layer-wise-training-references.md
reports/: ANALYSIS_SUMMARY_20260401.md  COMPLETE_PROJECT_MAPPING_20260319.md  COMPREHENSIVE_AUTOMATION_ANALYSIS_20260401.md  COMPREHENSIVE_REVIEW_FIX_LOG.md  FINAL_M16_COMPLETION_REPORT.md  IMPLEMENTATION_ROADMAP_12WEEKS.md  M2_GATE_ASSESSMENT.md  README.md  WEEK1_COMPREHENSIVE_REVIEW_ANALYSIS.md  WEEK1_FINAL_COMPREHENSIVE_REVIEW.md  WEEK2_SKILL2_COMPREHENSIVE_REVIEW.md  WEEK2_SKILL2_REVIEW_COMPLETE.md  WEEK3_6_COMPLETION_REPORT.md  comprehensive-review-20260401-113450.md  comprehensive-review-20260401-113612.md  comprehensive-review-20260401-113732.md  comprehensive-review-20260401-113752.md  comprehensive-review-20260401-122110.md  comprehensive-review-20260401-123151.md  comprehensive-review-20260401-123839.md  design_organize_report.txt  (+10 more)
(+749 files in other folders)
