[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_util"
version = "0.1.0"
description = "Common Python module: jax_util"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "scipy-stubs",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
# 型検査は strict を基本方針とします。
typeCheckingMode = "strict"

# 既定の baseline は通常運用する実装モジュールに限定します。
include = ["./python/jax_util"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/build",
  "**/dist",
  "./python/jax_util/neuralnetwork",
  "./python/jax_util/solvers/archive",
]

# ローカルパッケージ解決のため、python を追加します。
extraPaths = ["./python", "./python/jax_util"]
stubPath = "./python/typings"

# 既存の型情報が薄い依存に配慮し、unknown 系は抑制します。
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnusedVariable = "none"
reportConstantRedefinition = "none"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
